--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a class="logo" href="#">WebStudio</a>
         <nav class="menu">
           <ul class="list">
-            <li id="current" class="menu-list"> 
+            <li id="current" class="menu-list">
               <a class="link current" href="./index.html">Estudio</a>
             </li>
             <li class="menu-list">
@@ -383,6 +383,6 @@
         </div>
       </footer>
     </div>
-    <script src="/js/modal.js"></script>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
